@@ -242,7 +242,7 @@ class Tx_Oelib_Tests_Unit_ViewHelpers_GoogleMapsViewHelperTest extends Tx_Phpuni
         $this->subject->render([$this->mapPointWithCoordinates]);
 
         self::assertContains(
-            '<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>',
+            '<script src="https://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>',
             $this->mockFrontEnd->additionalHeaderData[Tx_Oelib_ViewHelpers_GoogleMapsViewHelper::LIBRARY_JAVASCRIPT_HEADER_KEY]
         );
     }
